# rosa_firmware_Pablo

./: .gitignore  CMakeLists.txt  package.xml  platformio.ini
esp32_board/: README.md  platformio.ini
esp32_board/include/: rosa_esp32_defs.h  rosa_esp32_utils.h
esp32_board/src/: main.cpp  robo_claw.cpp  robo_claw.h  robot_drive.cpp  robot_drive.h  rosa_esp32_defs.cpp  rosa_wifi.cpp  rosa_wifi.h
include/: rosa_defs.h  utils.h
qt_interface/: RosaESP32Interface.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialconfigdialog.cpp  serialconfigdialog.h  serialconfigdialog.ui
rosa_driver/: CMakeLists.txt  README.md  rosa_driver.cpp
shared_src/: rosa_messages.h  spslib.h
src/: RosaBT.cpp  RosaBT.h  main.cpp  robot_drive.cpp  robot_drive.h  rosa_gamepad.cpp  rosa_gamepad.h
